--- a/Weeks/Week1.html
+++ b/Weeks/Week1.html
@@ -27,7 +27,7 @@
 				<ul class = "nav navbar-nav">
 					<li><a href="../about.html">About</a></li>
 					<li class="dropdown">
-						 <a class="dropdown-toggle" data-toggle="dropdown">Assignments
+						 <a class="dropdown-toggle" data-toggle="dropdown">Projects
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li class="active"><a href="Week1.html">Week 1</a></li>
@@ -47,9 +47,9 @@
 	</div>
 	<!-- Top Of Page -->
 	<div class = "bg-2 container-fluid">
-	<p><a href = "Week1_Folders/Exercise_1/index.html">Exercise 1.0: Draw Some Shapes</a></p>
-	<p><a href = "Week1_Folders/assignment_1_0/index.html">Assignment 1.0: Stick Figure </a></p>
-	<p><a href = "Week1_Folders/assignment_1_1/index.html">Assignment 1.1: Landscape </a></p>
+	<p><a href = "Week1_Folders/Exercise_1/index.html">Draw Some Shapes</a></p>
+	<p><a href = "Week1_Folders/assignment_1_0/index.html">Stick Figure </a></p>
+	<p><a href = "Week1_Folders/assignment_1_1/index.html">Landscape </a></p>
 
 	</div>
 </body>
