--- a/Weeks/Week1_Folders/assignment_1_0/index.html
+++ b/Weeks/Week1_Folders/assignment_1_0/index.html
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title>Assignment 1.0</title>
+		<title>Rodin</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="../../../styles.css">
 		<script src="script.js"></script>
