--- a/Weeks/Week3.html
+++ b/Weeks/Week3.html
@@ -27,7 +27,7 @@
 				<ul class = "nav navbar-nav">
 					<li><a href="../About.html">About</a></li>
 					<li class="dropdown">
-						 <a class="dropdown-toggle" data-toggle="dropdown">Assignments
+						 <a class="dropdown-toggle" data-toggle="dropdown">Projects
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="Week1.html">Week 1</a></li>
@@ -48,7 +48,7 @@
 	<!-- Top Of Page -->
 	<!-- Top Of Page -->
 	<div class = "bg-2 container-fluid">
-	<p><a href = "Week3_Folders/Exercise_1/index.html">Exercise 3.0: Screensaver</a></p>
-	<p><a href = "Week3_Folders/Assignment_3_0/index.html">Assingment 3.0: Drawing Forms</a></p>
+	<p><a href = "Week3_Folders/Exercise_1/index.html">Screensaver</a></p>
+	<p><a href = "Week3_Folders/Assignment_3_0/index.html">Drawing Forms</a></p>
 	</div>
 </body>
