--- a/Weeks/Week3_Folders/Exercise_1/index.html
+++ b/Weeks/Week3_Folders/Exercise_1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title>Exercise 3.0</title>
+		<title>Screensaver</title>
 		<link rel="stylesheet" href="../../../styles.css">
 		<script src="script.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js">
