--- a/Weeks/Week5.html
+++ b/Weeks/Week5.html
@@ -27,7 +27,7 @@
 				<ul class = "nav navbar-nav">
 					<li><a href="../About.html">About</a></li>
 					<li class="dropdown">
-						 <a class="dropdown-toggle" data-toggle="dropdown">Assignments
+						 <a class="dropdown-toggle" data-toggle="dropdown">Projects
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="Week1.html">Week 1</a></li>
@@ -48,7 +48,7 @@
 	<!-- Top Of Page -->
 	<!-- Top Of Page -->
 	<div class = "bg-2 container-fluid">
-	<p><a href = "Week5_Folders/Exercise_1/index.html">Exercise 5.0: Objects and Images</a></p>
-	<p><a href = "Week5_Folders/Assignment_5_0/index.html">Assingment 5.0: Game v.2</a></p>
+	<p><a href = "Week5_Folders/Exercise_1/index.html">Objects and Images</a></p>
+	<p><a href = "Week5_Folders/Assignment_5_0/index.html"> Game v.2</a></p>
 	</div>
 </body>
