--- a/Weeks/Week6.html
+++ b/Weeks/Week6.html
@@ -27,7 +27,7 @@
 				<ul class = "nav navbar-nav">
 					<li><a href="../About.html">About</a></li>
 					<li class="dropdown">
-						 <a class="dropdown-toggle" data-toggle="dropdown">Assignments
+						 <a class="dropdown-toggle" data-toggle="dropdown">Projects
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="Week1.html">Week 1</a></li>
@@ -48,6 +48,6 @@
 	<!-- Top Of Page -->
 	<!-- Top Of Page -->
 	<div class = "bg-2 container-fluid">
-	<p><a href = "Week6_Folders/Assignment_6_0/index.html">Assingment 6.0: Generative Art</a></p>
+	<p><a href = "Week6_Folders/Assignment_6_0/index.html">Generative Art</a></p>
 	</div>
 </body>
