--- a/Weeks/Week6_Folders/Assignment_6_0/index.html
+++ b/Weeks/Week6_Folders/Assignment_6_0/index.html
@@ -8,7 +8,7 @@
 	<html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Assignment 6.0</title>
+		<title>The Virus</title>
 		<link rel="stylesheet" href="../../../styles.css">
 		<script src="script.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js">
