--- a/Weeks/Week1_Folders/assignment_1_1/index.html
+++ b/Weeks/Week1_Folders/assignment_1_1/index.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title>Assignment 1.1</title>
+		<title>Procedural Pastorial</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="../../../styles.css">
 		<script src="script.js"></script>
