--- a/Weeks/Week2.html
+++ b/Weeks/Week2.html
@@ -27,7 +27,7 @@
 				<ul class = "nav navbar-nav">
 					<li><a href="../about.html">About</a></li>
 					<li class="dropdown">
-						 <a class="dropdown-toggle" data-toggle="dropdown">Assignments
+						 <a class="dropdown-toggle" data-toggle="dropdown">Projects
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="Week1.html">Week 1</a></li>
@@ -47,8 +47,8 @@
 	</div>
 	<!-- Top Of Page -->
 	<div class = "bg-2 container-fluid">
-	<p><a href = "Week2_Folders/Exercise_1/index.html">Exercise 2.0: Iteration</a></p>
-	<p><a href = "Week2_Folders/Assignment_2_0/index.html">Assignment 2.0: Tiles</a></p>
-	<p><a href = "Week2_Folders/Assignment_2_1/index.html">Assignment 2.1: Drawing Application</a></p>
+	<p><a href = "Week2_Folders/Exercise_1/index.html">Iteration</a></p>
+	<p><a href = "Week2_Folders/Assignment_2_0/index.html">Tiles</a></p>
+	<p><a href = "Week2_Folders/Assignment_2_1/index.html">Drawing Application</a></p>
 	</div>
 </body>
