--- a/Weeks/Week2_Folders/Assignment_2_0/index.html
+++ b/Weeks/Week2_Folders/Assignment_2_0/index.html
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title>Assigment 2.0</title>
+		<title>Candy Land</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="../../../styles.css">
 		<script src="script.js"></script>
