--- a/Weeks/Week2_Folders/Assignment_2_1/index.html
+++ b/Weeks/Week2_Folders/Assignment_2_1/index.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title>Assigment 2.1</title>
+		<title>Drawing Application</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="../../../styles.css">
 		<script src="script.js"></script>
