--- a/Weeks/Week3_Folders/Assignment_3_0/index.html
+++ b/Weeks/Week3_Folders/Assignment_3_0/index.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title>Assignment 3.0</title>
+		<title>Spiral Arms</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="../../../styles.css">
 		<script src="script.js"></script>
