--- a/Weeks/Week3_Folders/Assignment_3_0/partTwo.html
+++ b/Weeks/Week3_Folders/Assignment_3_0/partTwo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title>Assignment 3.0</title>
+		<title>Spiral Arms</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="../../../styles.css">
 		<script src="scriptTwo.js"></script>
