--- a/Weeks/Week4.html
+++ b/Weeks/Week4.html
@@ -27,7 +27,7 @@
 				<ul class = "nav navbar-nav">
 					<li><a href="../About.html">About</a></li>
 					<li class="dropdown">
-						 <a class="dropdown-toggle" data-toggle="dropdown">Assignments
+						 <a class="dropdown-toggle" data-toggle="dropdown">Projects
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="Week1.html">Week 1</a></li>
@@ -48,8 +48,8 @@
 	<!-- Top Of Page -->
 	<!-- Top Of Page -->
 	<div class = "bg-2 container-fluid">
-	<p><a href = "Week4_Folders/Exercise_1/index.html">Exercise 4.0: Teleporting Box </a></p>
-	<p><a href = "Week4_Folders/Assignment_4_0/index.html">Assingment 4.0: Game</a></p>
+	<p><a href = "Week4_Folders/Exercise_1/index.html">Teleporting Box </a></p>
+	<p><a href = "Week4_Folders/Assignment_4_0/index.html">Game</a></p>
 	<p><a href = "https://youtu.be/LNTQeBbQPAE">Blooper Clip from the production process</a></p>
 	</div>
 </body>
