--- a/Weeks/Week4_Folders/Assignment_4_0/index.html
+++ b/Weeks/Week4_Folders/Assignment_4_0/index.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title>Assignment 4.0</title>
+		<title>Curling Exreme v1</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="../../../styles.css">
 		<script src="script.js"></script>
