--- a/Weeks/Week5_Folders/Exercise_1/index.html
+++ b/Weeks/Week5_Folders/Exercise_1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title>Exercise 5.0</title>
+		<title>Random Screensaver</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="../../../styles.css">
 		<script src="script.js"></script>
