--- a/Weeks/Week9_Folders/Assignment_9_0/index.html
+++ b/Weeks/Week9_Folders/Assignment_9_0/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   	<meta charset="utf-8" />
-  	<title>Assignment 9.0</title>
+  	<title>Conductor</title>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.sound.min.js"></script>
