--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 				<ul class = "nav navbar-nav">
 					<li class="active"><a href="about.html">About</a></li>
 					<li class="dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Assignments
+						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 						    <li><a href="Weeks/Week1.html">Week 1</a></li>
