--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Assignment 0: Make a Website,
 Elijah's Programings
 -->
 <head>
-	<title>ARTG2260 Assignments</title>
+	<title>Elijah's Portfolio</title>
 	<link rel="stylesheet" href="styles.css">
 		<meta charset="utf-8">
   	  <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -34,7 +34,7 @@ Elijah's Programings
 				<ul class = "nav navbar-nav">
 					<li><a href="about.html">About</a></li>
 					<li class="dropdown">
-					    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Assignments
+					    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects
 					    <span class="caret"></span></a>
 					    <ul class="dropdown-menu">
 					        <li><a href="Weeks/Week1.html">Week 1</a></li>
@@ -57,7 +57,7 @@ Elijah's Programings
 			<h1><b>Welcome, witness the programmings</b></h1>
 	</div>
 	<div class = "bott container-fluid">
-		<h2>Weekly Assignments</h2>
+		<h2>Projects</h2>
 		<div class = "row">
 			<div class = "col-sm-4">
 				<a href="Weeks/Week1.html">
